# MidiCapture

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: entry.cpp  gui.cpp  gui.h  midi_export.cpp  midi_export.h  plugin.cpp  plugin.h
